initial set up of grid

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
-.Landing-Page {
-  background: black;
+.landing-page {
+  position: absolute;
+  display: grid;
+  grid-template-rows: 20vh 20vh 20vh 20vh 20vh;
+  grid-template-columns: 1fr 1fr 2fr 2fr 1fr 1fr;
 }
