align items on lp central - flexbox within flexgrid set up

--- a/src/components/landingpage/css/MainContentLP.css
+++ b/src/components/landingpage/css/MainContentLP.css
@@ -2,3 +2,11 @@
   height: 4em;
   transform: rotate(-90deg);
 }
+
+.main-content {
+  grid-row: 2 / span 3;
+  grid-column: 3 / span 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
