--- a/src/components/landingpage/css/LandingPage.css
+++ b/src/components/landingpage/css/LandingPage.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Raleway";
+  font-size: 1.5em;
 }
 
 .placeholder {
@@ -11,7 +12,7 @@ body {
   grid-column: 3 / span 2;
   align-self: center;
   justify-self: center;
-  height: 4em;
+  height: 3em;
   transform: rotate(-90deg);
 }
 
