--- a/src/components/landingpage/css/LandingPage.css
+++ b/src/components/landingpage/css/LandingPage.css
@@ -14,6 +14,7 @@ body {
   justify-self: center;
   height: 3em;
   transform: rotate(-90deg);
+  cursor: pointer;
 }
 
 .main-content {
@@ -22,4 +23,22 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.navbar {
+  position: fixed;
+  top: 35px;
+  z-index: 9998;
+  cursor: pointer;
+  padding: 5px 4px;
+  background-color: transparent;
+  right: 38px;
+}
+
+.navbar i {
+  display: block;
+  width: 42px;
+  height: 2px;
+  margin: 8px;
+  background-color: #7a7a7a;
 }
