aligning with flexbox

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
   grid-template-rows: 20vh 20vh 20vh 20vh 20vh;
   grid-template-columns: 1fr 1fr 2fr 2fr 1fr 1fr;
 }
+
+.project-page {
+  /* position: absolute;
+  display: grid;
+  grid-template-rows: 20vh 20vh 20vh 20vh 20vh;
+  grid-template-columns: 1fr 1fr 2fr 2fr 1fr 1fr; */
+}
