--- a/src/components/projectpage/css/ProjectPage.css
+++ b/src/components/projectpage/css/ProjectPage.css
@@ -1,13 +1,37 @@
 .project-grid {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  transition: opacity 0.3s ease-out;
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-gap: 10px;
+  text-align: center;
 }
 
 .project-item {
-  position: relative;
-  display: block;
+  grid-column: 2/5;
   padding: 1.2em;
   width: 50%;
+}
+
+.project-item:nth-child(2) {
+  grid-column: 5/8;
+  padding: 1.2em;
+  width: 50%;
+}
+
+.project-item:nth-child(3) {
+  grid-column: 8/11;
+  padding: 1.2em;
+  width: 50%;
+}
+
+.line {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0)
+  );
 }
