--- a/src/components/projectpage/css/ProjectPage.css
+++ b/src/components/projectpage/css/ProjectPage.css
@@ -1,26 +1,34 @@
+.project-page h2 {
+  text-align: center;
+}
+
 .project-grid {
   display: grid;
   grid-template-columns: repeat(11, 1fr);
   grid-gap: 10px;
   text-align: center;
+  justify-items: center;
 }
 
 .project-item {
   grid-column: 2/5;
   padding: 1.2em;
-  width: 50%;
 }
 
 .project-item:nth-child(2) {
   grid-column: 5/8;
   padding: 1.2em;
-  width: 50%;
 }
 
 .project-item:nth-child(3) {
   grid-column: 8/11;
   padding: 1.2em;
-  width: 50%;
+}
+
+.project-image {
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .line {
