--- a/src/components/projectpage/css/ProjectPage.css
+++ b/src/components/projectpage/css/ProjectPage.css
@@ -14,6 +14,7 @@
 .project-item {
   grid-column: 2/5;
   padding: 1.2em;
+  position: relative;
 }
 
 .project-item:nth-child(2) {
@@ -30,6 +31,35 @@
   width: 100%;
   border-radius: 5px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.project-item:hover .overlay {
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: #008cba;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .line {
