--- a/src/components/mutual/navbar/NavBar.css
+++ b/src/components/mutual/navbar/NavBar.css
@@ -11,8 +11,8 @@ a:hover {
 
 #menuToggle {
   display: block;
-  position: relative;
-  top: 25px;
+  position: fixed;
+  top: 45px;
   right: 50px;
   float: right;
   z-index: 1;
@@ -80,6 +80,7 @@ a:hover {
 
 #menu {
   display: flex;
+  justify-content: center;
   position: absolute;
   width: 1000px;
   margin: -100px 0 0 -1000px;
@@ -89,7 +90,7 @@ a:hover {
   -webkit-font-smoothing: antialiased;
 
   transform-origin: 0% 0%;
-  transform: translate(0, -100%);
+  transform: translate(100%, 0);
 
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
