--- a/src/components/contactpage/ContactPage.css
+++ b/src/components/contactpage/ContactPage.css
@@ -2,3 +2,16 @@
   padding-top: 3em;
   text-align: center;
 }
+
+.contact-box {
+  padding-top: 20vh;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-details {
+  background: grey;
+  color: white;
+  width: 30em;
+  text-align: center;
+}
