--- a/src/components/projectpage/css/ProjectPage.css
+++ b/src/components/projectpage/css/ProjectPage.css
@@ -80,8 +80,9 @@
   transform: translate(-50%, -50%);
 }
 
-.text p:nth-child(1) {
-  align-self: flex-end;
+.text a:hover {
+  font-weight: bold;
+  color: black;
 }
 
 .line {
