dial page back to minimalistic set up until extra feature works

--- a/src/components/landingpage/css/LandingPage.css
+++ b/src/components/landingpage/css/LandingPage.css
@@ -7,6 +7,10 @@ body {
   background: blue;
 }
 
+.description {
+  text-align: center;
+}
+
 .arrow-down-router {
   display: flex;
   flex-direction: column;
