--- a/src/components/landingpage/css/LandingPage.css
+++ b/src/components/landingpage/css/LandingPage.css
@@ -3,6 +3,12 @@ body {
   font-size: 1.5em;
 }
 
+.landing-page__flexbox {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
 .placeholder {
   background: blue;
 }
@@ -59,8 +65,6 @@ body {
 }
 
 .main-content {
-  grid-row: 2 / span 3;
-  grid-column: 3 / span 2;
   display: flex;
   flex-direction: column;
   align-items: center;
